Integrase and switch gene expressed from the same operon

--- a/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
+++ b/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
@@ -123,13 +123,12 @@
     "par['c_switch'] = 10.0  # gene concentration (nM)\n",
     "par['a_switch'] = 2000.0  # promoter strength (unitless)\n",
     "par['d_switch']=0.01836\n",
-    "#integrase gene\n",
-    "par['c_int'] = 10.0  # gene concentration (nM)\n",
-    "par['a_int'] = 50.0  # promoter strength (unitless)\n",
-    "par['d_int'] = 0.01836  # integrase protein degradation rate (to avoid unnecessary punishment)\n",
+    "#integrase - expressed from the switch gene's operon, not its own gene => c_int, a_int irrelevant\n",
+    "par['k+_int'] = par['k+_switch']/40.0  # RBS weaker than for the switch gene\n",
+    "par['d_int'] = 0.01836  # rate of integrase degradation per protease molecule (1/nM/h)\n",
     "# CAT (antibiotic resistance) gene\n",
-    "init_conds['cat_pb'] = 1.0  # gene concentration (nM) - INITIAL CONDITION< NOT PARAMETER as it can be cut out by the integrase\n",
-    "par['a_cat'] = 5000.0  # promoter strength (unitless)\n",
+    "init_conds['cat_pb'] = 10.0  # gene concentration (nM) - INITIAL CONDITION< NOT PARAMETER as it can be cut out by the integrase\n",
+    "par['a_cat'] = 500.0  # promoter strength (unitless)\n",
     "# synthetic protease gene\n",
     "par['c_prot'] = 10.0  # gene concentration (nM)\n",
     "par['a_prot'] = 50.0  # promoter strength (unitless)\n",
