More work on fall times

--- a/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
+++ b/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
@@ -146,7 +146,7 @@
     "par['h_ext'] = 10.5 * (10.0 ** 3)\n",
     "\n",
     "# LOOKING AT TRANSITIONS WITH CAT AWLAYS PRESENT => INTEGRASE INACTIVE\n",
-    "par['k_sxf']=0"
+    "par['k_sxf']=0.0"
    ],
    "metadata": {
     "collapsed": false,
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# PLOT SWITCH TRAJECTORIES\n",
+    "# PLOT SWITCH TIMES\n",
     "hist_bins=100\n",
     "\n",
     "# HISTOGRAM OF FALL TIMES: HIGH TO LOW\n",
@@ -503,24 +503,12 @@
   {
    "cell_type": "code",
    "source": [
-    "# SIMULATE FOR NO XTRA GENE\n",
-    "\n",
     "# GET DETERMINISTIC STEADY STATE\n",
-    "init_conds['p_switch'] = p_switch_upper_bound\n",
-    "# initial simulation to get the steady state without gene expression loss\n",
-    "# NOTE: since no REAL low-expression equilibrium exists for no xtra gene, deterministic simulation uses parameters WITH the xtra gene present\n",
-    "tf = (0, 50)  # simulation time frame\n",
-    "sol=ode_sim(par,    # dictionary with model parameters\n",
-    "            ode_with_circuit,   #  ODE function for the cell with synthetic circuit\n",
-    "            cellmodel_auxil.x0_from_init_conds(init_conds,circuit_genes,circuit_miscs),  # initial condition VECTOR\n",
-    "            len(circuit_genes), len(circuit_miscs), circuit_name2pos, # dictionaries with circuit gene and miscellaneous specie names, species name to vector position decoder\n",
-    "            cellmodel_auxil.synth_gene_params_for_jax(par,circuit_genes), # synthetic gene parameters for calculating k values\n",
-    "            tf, jnp.arange(tf[0], tf[1]+savetimestep/2, savetimestep), # time frame and time axis for saving the system's state\n",
-    "            rtol, atol)    # relative and absolute tolerances\n",
-    "ts_det_no_xtra=np.array(sol.ts)\n",
-    "xs_det_no_xtra=np.array(sol.ys)\n",
-    "# get the steady state from the deterministic simulation\n",
-    "det_steady_x_no_xtra = xs_det_no_xtra[-1, :]"
+    "\n",
+    "# taken from the case with burden\n",
+    "ts_det_no_xtra=ts_det.copy()\n",
+    "xs_det_no_xtra=xs_det.copy()\n",
+    "det_steady_x_no_xtra=det_steady_x.copy()"
    ],
    "metadata": {
     "collapsed": false,
@@ -543,8 +531,8 @@
    "source": [
     "# MEMORY-EFFICIENT SWITCH TIME DETERMINATION\n",
     "\n",
-    "# we consider state switched when the CHARACTERISTIC PROTEIN CONCENTRATION is reached\n",
-    "# IMPORTANT: now we base time extimation based on the case with the xtra gene present here, too\n",
+    "# we consider state switched when we come within  10% OF CHARACTERISTIC PROTEIN CONCENTRATION\n",
+    "# IMPORTANT: switch states assumed to be the same between the cases with and without the xtra gene\n",
     "sc_high_to_low_no_xtra=sc_high_to_low # high to low switching\n",
     "\n",
     "par_no_xtra=par.copy() # parameters for the case with the xtra gene absent\n",
@@ -630,7 +618,7 @@
    "source": [
     "# PLOT SWITCH TIMES\n",
     "simtraj_alpha=0.5\n",
-    "hist_bins=5\n",
+    "hist_bins=100\n",
     "\n",
     "# HISTOGRAM OF FALL TIMES: HIGH TO LOW\n",
     "falltime_htl_hist_noburden=bkplot.figure(title='Distribution of high-to-low switch times',\n",
@@ -656,35 +644,24 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-30T16:12:02.828095Z",
-     "start_time": "2024-05-30T16:12:02.798843Z"
+     "end_time": "2024-05-31T12:36:44.114835Z",
+     "start_time": "2024-05-31T12:36:43.900499Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "  <div id=\"fb35ea7d-4dfe-4708-b428-ef10e2f561d9\" data-root-id=\"p1052\" style=\"display: contents;\"></div>\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": "(function(root) {\n  function embed_document(root) {\n  const docs_json = {\"6fbfaad7-8d49-492f-ba71-cbb966b5bff8\":{\"version\":\"3.4.0\",\"title\":\"Bokeh Application\",\"roots\":[{\"type\":\"object\",\"name\":\"Figure\",\"id\":\"p1052\",\"attributes\":{\"width\":400,\"height\":300,\"x_range\":{\"type\":\"object\",\"name\":\"DataRange1d\",\"id\":\"p1053\"},\"y_range\":{\"type\":\"object\",\"name\":\"DataRange1d\",\"id\":\"p1054\"},\"x_scale\":{\"type\":\"object\",\"name\":\"LinearScale\",\"id\":\"p1062\"},\"y_scale\":{\"type\":\"object\",\"name\":\"LinearScale\",\"id\":\"p1063\"},\"title\":{\"type\":\"object\",\"name\":\"Title\",\"id\":\"p1055\",\"attributes\":{\"text\":\"Distribution of high-to-low switch times\"}},\"renderers\":[{\"type\":\"object\",\"name\":\"GlyphRenderer\",\"id\":\"p1091\",\"attributes\":{\"data_source\":{\"type\":\"object\",\"name\":\"ColumnDataSource\",\"id\":\"p1085\",\"attributes\":{\"selected\":{\"type\":\"object\",\"name\":\"Selection\",\"id\":\"p1086\",\"attributes\":{\"indices\":[],\"line_indices\":[]}},\"selection_policy\":{\"type\":\"object\",\"name\":\"UnionRenderers\",\"id\":\"p1087\"},\"data\":{\"type\":\"map\",\"entries\":[[\"top\",{\"type\":\"ndarray\",\"array\":{\"type\":\"bytes\",\"data\":\"AQAAAAAAAAABAAAAAAAAAAEAAAA=\"},\"shape\":[5],\"dtype\":\"int32\",\"order\":\"little\"}],[\"left\",{\"type\":\"ndarray\",\"array\":{\"type\":\"bytes\",\"data\":\"cT0K16Nw3T+9dJMYBFbePwmsHFpkO98/qvHSTWIQ4D9QjZduEoPgPw==\"},\"shape\":[5],\"dtype\":\"float64\",\"order\":\"little\"}],[\"right\",{\"type\":\"ndarray\",\"array\":{\"type\":\"bytes\",\"data\":\"vXSTGARW3j8JrBxaZDvfP6rx0k1iEOA/UI2XbhKD4D/2KFyPwvXgPw==\"},\"shape\":[5],\"dtype\":\"float64\",\"order\":\"little\"}]]}}},\"view\":{\"type\":\"object\",\"name\":\"CDSView\",\"id\":\"p1092\",\"attributes\":{\"filter\":{\"type\":\"object\",\"name\":\"AllIndices\",\"id\":\"p1093\"}}},\"glyph\":{\"type\":\"object\",\"name\":\"Quad\",\"id\":\"p1088\",\"attributes\":{\"left\":{\"type\":\"field\",\"field\":\"left\"},\"right\":{\"type\":\"field\",\"field\":\"right\"},\"bottom\":{\"type\":\"value\",\"value\":0},\"top\":{\"type\":\"field\",\"field\":\"top\"},\"line_color\":{\"type\":\"value\",\"value\":\"magenta\"},\"fill_color\":{\"type\":\"value\",\"value\":\"magenta\"},\"hatch_color\":{\"type\":\"value\",\"value\":\"magenta\"}}},\"nonselection_glyph\":{\"type\":\"object\",\"name\":\"Quad\",\"id\":\"p1089\",\"attributes\":{\"left\":{\"type\":\"field\",\"field\":\"left\"},\"right\":{\"type\":\"field\",\"field\":\"right\"},\"bottom\":{\"type\":\"value\",\"value\":0},\"top\":{\"type\":\"field\",\"field\":\"top\"},\"line_color\":{\"type\":\"value\",\"value\":\"magenta\"},\"line_alpha\":{\"type\":\"value\",\"value\":0.1},\"fill_color\":{\"type\":\"value\",\"value\":\"magenta\"},\"fill_alpha\":{\"type\":\"value\",\"value\":0.1},\"hatch_color\":{\"type\":\"value\",\"value\":\"magenta\"},\"hatch_alpha\":{\"type\":\"value\",\"value\":0.1}}},\"muted_glyph\":{\"type\":\"object\",\"name\":\"Quad\",\"id\":\"p1090\",\"attributes\":{\"left\":{\"type\":\"field\",\"field\":\"left\"},\"right\":{\"type\":\"field\",\"field\":\"right\"},\"bottom\":{\"type\":\"value\",\"value\":0},\"top\":{\"type\":\"field\",\"field\":\"top\"},\"line_color\":{\"type\":\"value\",\"value\":\"magenta\"},\"line_alpha\":{\"type\":\"value\",\"value\":0.2},\"fill_color\":{\"type\":\"value\",\"value\":\"magenta\"},\"fill_alpha\":{\"type\":\"value\",\"value\":0.2},\"hatch_color\":{\"type\":\"value\",\"value\":\"magenta\"},\"hatch_alpha\":{\"type\":\"value\",\"value\":0.2}}}}}],\"toolbar\":{\"type\":\"object\",\"name\":\"Toolbar\",\"id\":\"p1061\",\"attributes\":{\"tools\":[{\"type\":\"object\",\"name\":\"PanTool\",\"id\":\"p1074\"},{\"type\":\"object\",\"name\":\"WheelZoomTool\",\"id\":\"p1075\",\"attributes\":{\"renderers\":\"auto\"}},{\"type\":\"object\",\"name\":\"BoxZoomTool\",\"id\":\"p1076\",\"attributes\":{\"overlay\":{\"type\":\"object\",\"name\":\"BoxAnnotation\",\"id\":\"p1077\",\"attributes\":{\"syncable\":false,\"level\":\"overlay\",\"visible\":false,\"left\":{\"type\":\"number\",\"value\":\"nan\"},\"right\":{\"type\":\"number\",\"value\":\"nan\"},\"top\":{\"type\":\"number\",\"value\":\"nan\"},\"bottom\":{\"type\":\"number\",\"value\":\"nan\"},\"left_units\":\"canvas\",\"right_units\":\"canvas\",\"top_units\":\"canvas\",\"bottom_units\":\"canvas\",\"line_color\":\"black\",\"line_alpha\":1.0,\"line_width\":2,\"line_dash\":[4,4],\"fill_color\":\"lightgrey\",\"fill_alpha\":0.5}}}},{\"type\":\"object\",\"name\":\"SaveTool\",\"id\":\"p1082\"},{\"type\":\"object\",\"name\":\"ResetTool\",\"id\":\"p1083\"},{\"type\":\"object\",\"name\":\"HelpTool\",\"id\":\"p1084\"}]}},\"left\":[{\"type\":\"object\",\"name\":\"LinearAxis\",\"id\":\"p1069\",\"attributes\":{\"ticker\":{\"type\":\"object\",\"name\":\"BasicTicker\",\"id\":\"p1070\",\"attributes\":{\"mantissas\":[1,2,5]}},\"formatter\":{\"type\":\"object\",\"name\":\"BasicTickFormatter\",\"id\":\"p1071\"},\"axis_label\":\"Frequency\",\"major_label_policy\":{\"type\":\"object\",\"name\":\"AllLabels\",\"id\":\"p1072\"}}}],\"below\":[{\"type\":\"object\",\"name\":\"LinearAxis\",\"id\":\"p1064\",\"attributes\":{\"ticker\":{\"type\":\"object\",\"name\":\"BasicTicker\",\"id\":\"p1065\",\"attributes\":{\"mantissas\":[1,2,5]}},\"formatter\":{\"type\":\"object\",\"name\":\"BasicTickFormatter\",\"id\":\"p1066\"},\"axis_label\":\"Fall time [h]\",\"major_label_policy\":{\"type\":\"object\",\"name\":\"AllLabels\",\"id\":\"p1067\"}}}],\"center\":[{\"type\":\"object\",\"name\":\"Grid\",\"id\":\"p1068\",\"attributes\":{\"axis\":{\"id\":\"p1064\"}}},{\"type\":\"object\",\"name\":\"Grid\",\"id\":\"p1073\",\"attributes\":{\"dimension\":1,\"axis\":{\"id\":\"p1069\"}}},{\"type\":\"object\",\"name\":\"Span\",\"id\":\"p1094\",\"attributes\":{\"location\":0.49333333333333335,\"dimension\":\"height\",\"line_color\":\"navy\",\"line_alpha\":0.5,\"line_width\":2,\"line_dash\":[6]}},{\"type\":\"object\",\"name\":\"BoxAnnotation\",\"id\":\"p1095\",\"attributes\":{\"left\":0.23143959234046185,\"right\":4.971210020677928,\"top\":{\"type\":\"object\",\"name\":\"Node\",\"id\":\"p1098\",\"attributes\":{\"target\":\"frame\",\"symbol\":\"top\"}},\"bottom\":{\"type\":\"object\",\"name\":\"Node\",\"id\":\"p1099\",\"attributes\":{\"target\":\"frame\",\"symbol\":\"bottom\"}},\"fill_color\":\"navy\",\"fill_alpha\":0.1}}]}}]}};\n  const render_items = [{\"docid\":\"6fbfaad7-8d49-492f-ba71-cbb966b5bff8\",\"roots\":{\"p1052\":\"fb35ea7d-4dfe-4708-b428-ef10e2f561d9\"},\"root_ids\":[\"p1052\"]}];\n  void root.Bokeh.embed.embed_items_notebook(docs_json, render_items);\n  }\n  if (root.Bokeh !== undefined) {\n    embed_document(root);\n  } else {\n    let attempts = 0;\n    const timer = setInterval(function(root) {\n      if (root.Bokeh !== undefined) {\n        clearInterval(timer);\n        embed_document(root);\n      } else {\n        attempts++;\n        if (attempts > 100) {\n          clearInterval(timer);\n          console.log(\"Bokeh: ERROR: Unable to run BokehJS code because BokehJS library is missing\");\n        }\n      }\n    }, 10, root)\n  }\n})(window);",
-      "application/vnd.bokehjs_exec.v0+json": ""
-     },
-     "metadata": {
-      "application/vnd.bokehjs_exec.v0+json": {
-       "id": "p1052"
-      }
-     },
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'bkplot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 6\u001B[0m\n\u001B[1;32m      3\u001B[0m hist_bins\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m100\u001B[39m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;66;03m# HISTOGRAM OF FALL TIMES: HIGH TO LOW\u001B[39;00m\n\u001B[0;32m----> 6\u001B[0m falltime_htl_hist_noburden\u001B[38;5;241m=\u001B[39mbkplot\u001B[38;5;241m.\u001B[39mfigure(title\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mDistribution of high-to-low switch times\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[1;32m      7\u001B[0m                                    x_axis_label\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mFall time [h]\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[1;32m      8\u001B[0m                                    y_axis_label\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mFrequency\u001B[39m\u001B[38;5;124m'\u001B[39m,\n\u001B[1;32m      9\u001B[0m                                    width\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m400\u001B[39m,height\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m300\u001B[39m)\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m# get numpy histogram\u001B[39;00m\n\u001B[1;32m     11\u001B[0m ft_htl_hist_noburden, ftl_htl_edges_noburden\u001B[38;5;241m=\u001B[39mnp\u001B[38;5;241m.\u001B[39mhistogram(high_to_low_switch_times_no_xtra,bins\u001B[38;5;241m=\u001B[39mhist_bins,density\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'bkplot' is not defined"
+     ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 1
   },
   {
    "metadata": {
