Fall and rise time scripts completed (?)

--- a/Fig5/Make Pop Model/Find_fall_times.ipynb
+++ b/Fig5/Make Pop Model/Find_fall_times.ipynb
@@ -585,7 +585,7 @@
     "sc_low_to_zero_no_xtra=sc_low_to_zero # low to zero switching\n",
     "\n",
     "par_no_xtra_no_switch=par_no_switch.copy()\n",
-    "par_no_xtra_no_switch['func_switch'] = 0.0\n",
+    "par_no_xtra_no_switch['func_xtra'] = 0.0\n",
     "\n",
     "tf_hybrid_no_xtra = (ts_det_no_xtra[-1], ts_det_no_xtra[-1] + tau_leap_sim_duration)  # simulation time frame\n",
     "mRNA_count_scales_no_xtra, S_no_xtra, x0_tauleap_no_xtra, circuit_synpos2genename_no_xtra, keys0_no_xtra = tauleap_sim_prep(par_no_xtra_no_switch, len(circuit_genes),\n",
