--- a/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
+++ b/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
@@ -185,7 +185,7 @@
     "tau = 5e-7  # simulation time step\n",
     "tau_odestep = 5e-7  # number of ODE integration steps in a single tau-leap step (smaller than tau)\n",
     "tau_savetimestep = 1e-2  # save time step a multiple of tau\n",
-    "key_seeds=[0,1,2]#np.arange(0,30000,1) # random number generator seeds - NUMBER OF KEYS DEFINES NUMBER OF TRAJECTORIES\n",
+    "key_seeds=np.arange(0,30000,1) # random number generator seeds - NUMBER OF KEYS DEFINES NUMBER OF TRAJECTORIES\n",
     "key_seeds_no_xtra=key_seeds.copy()  # same number of trajectories for the case with the xtra gene absent\n",
     "tau_leap_sim_duration=10 # duration of the tau-leap simulation (h)"
    ],
@@ -501,14 +501,83 @@
    "execution_count": 23
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# THE CASE WITH XTRA GENE MUTATED\n",
+    "\n",
+    "par_no_xtra = par.copy()  # parameters for the case with the xtra gene absent\n",
+    "par_no_xtra['func_xtra'] = 0.0  # xtra gene concentration\n",
+    "\n",
+    "cellvars_no_xtra = cellvars.copy()  # cellular variables for the case with the xtra gene absent\n",
+    "cellvars_no_xtra['xi_xtra'] = 0  # no  burdensome gene"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# GET THE HIGH STATE WITH THE XTRA GENE ABSENT (LOW STATE REUSED)\n",
+    "\n",
+    "# axis of p_switch values - there can only be an integer number of proteins\n",
+    "p_switches = np.arange(0, p_switch_upper_bound + 0.1, 1)\n",
+    "\n",
+    "# define function for calculating the squared difference between the required and actual F values\n",
+    "sqdiff_no_xtra = lambda p_switch: (F_real_calc(p_switch, par_no_xtra) - F_req_calc(p_switch, xi_no_xtra, par_no_xtra,\n",
+    "                                                                                   cellvars_no_xtra)) ** 2\n",
+    "\n",
+    "# find the squared differences\n",
+    "sqdiffs = np.zeros_like(p_switches)\n",
+    "for i in range(0, len(p_switches)):\n",
+    "    sqdiffs[i] = sqdiff_no_xtra(p_switches[i])\n",
+    "\n",
+    "# find the local minima and maxima in squared differences\n",
+    "loc_minima = []\n",
+    "loc_maxima = []\n",
+    "for i in range(1, len(p_switches) - 1):\n",
+    "    # detect a local minimum\n",
+    "    if (sqdiffs[i] <= sqdiffs[i - 1] and sqdiffs[i] <= sqdiffs[i + 1]):\n",
+    "        loc_minima.append(p_switches[i])\n",
+    "    # detect a local maximum\n",
+    "    elif (sqdiffs[i] >= sqdiffs[i - 1] and sqdiffs[i] >= sqdiffs[i + 1]):\n",
+    "        loc_maxima.append(p_switches[i])\n",
+    "\n",
+    "# print results\n",
+    "print('Local minima in squared difference:', loc_minima)\n",
+    "print('Local maxima in squared difference:', loc_maxima)\n",
+    "\n",
+    "# based on our prior findings, with burden present we expect one stable equilibrium, one pseudo-equilibrium and one local maximum in squared differences\n",
+    "# this corresponds to three local minima and two local maxima in the squared difference between F values\n",
+    "if (len(loc_minima) == 2 and len(loc_maxima) == 1):\n",
+    "    p_switch_high_no_xtra = loc_minima[1]  # REDEFINE high state standing for high-concentration stable equilibrium\n",
+    "    print('High state representative p_switch:', p_switch_high_no_xtra)\n",
+    "else:\n",
+    "    print('Something weird is going on')"
+   ]
+  },
+  {
    "cell_type": "code",
    "source": [
     "# GET DETERMINISTIC STEADY STATE\n",
     "\n",
-    "# taken from the case with burden\n",
-    "ts_det_no_xtra=ts_det.copy()\n",
-    "xs_det_no_xtra=xs_det.copy()\n",
-    "det_steady_x_no_xtra=det_steady_x.copy()"
+    "init_conds['p_switch'] = p_switch_upper_bound # to get high equilibrium, start at the upper bound\n",
+    "# initial simulation to get the steady state without gene expression loss\n",
+    "tf = (0, 50)  # simulation time frame\n",
+    "sol=ode_sim(par_no_xtra,    # dictionary with model parameters\n",
+    "            ode_with_circuit,   #  ODE function for the cell with synthetic circuit\n",
+    "            cellmodel_auxil.x0_from_init_conds(init_conds,circuit_genes,circuit_miscs),  # initial condition VECTOR\n",
+    "            len(circuit_genes), len(circuit_miscs), circuit_name2pos, # dictionaries with circuit gene and miscellaneous specie names, species name to vector position decoder\n",
+    "            cellmodel_auxil.synth_gene_params_for_jax(par_no_xtra,circuit_genes), # synthetic gene parameters for calculating k values\n",
+    "            tf, jnp.arange(tf[0], tf[1]+savetimestep/2, savetimestep), # time frame and time axis for saving the system's state\n",
+    "            rtol, atol)    # relative and absolute tolerances\n",
+    "ts_det_no_xtra=np.array(sol.ts)\n",
+    "xs_det_no_xtra=np.array(sol.ys)\n",
+    "# get the steady state from the deterministic simulation\n",
+    "det_steady_x_no_xtra = xs_det[-1, :]"
    ],
    "metadata": {
     "collapsed": false,
@@ -533,7 +602,7 @@
     "\n",
     "# we consider state switched when we come within  10% OF CHARACTERISTIC PROTEIN CONCENTRATION\n",
     "# IMPORTANT: switch states assumed to be the same between the cases with and without the xtra gene\n",
-    "sc_high_to_low_no_xtra=sc_high_to_low # high to low switching\n",
+    "sc_high_to_low_no_xtra=sc_high_to_low # high to low switching -same condition as LPOW state reused\n",
     "\n",
     "par_no_xtra=par.copy() # parameters for the case with the xtra gene absent\n",
     "par_no_xtra['func_xtra']=0.0 # no xtra gene\n",
