Remaining switch time bugs fixed

--- a/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
+++ b/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
@@ -602,7 +602,7 @@
     "\n",
     "# we consider state switched when we come within  10% OF CHARACTERISTIC PROTEIN CONCENTRATION\n",
     "# IMPORTANT: switch states assumed to be the same between the cases with and without the xtra gene\n",
-    "sc_high_to_low_no_xtra=sc_high_to_low # high to low switching -same condition as LPOW state reused\n",
+    "sc_high_to_low_no_xtra=sc_high_to_low # high to low switching -same condition as LOW state reused\n",
     "\n",
     "par_no_xtra=par.copy() # parameters for the case with the xtra gene absent\n",
     "par_no_xtra['func_xtra']=0.0 # no xtra gene\n",
