Try the new setup - more scripts

--- a/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
+++ b/Fig5/Make Pop Model/Find_switching_times_tolow.ipynb
@@ -33,7 +33,7 @@
     "import synthetic_circuits as circuits\n",
     "from cell_model import *\n",
     "from get_steady_state import values_for_analytical\n",
-    "from Fig2.design_guidance_tools import F_real_calc,F_req_calc\n",
+    "from Fig2.design_guidance_tools import F_real_calc,F_req_calc,pint_from_pswitch_and_xi\n",
     "from switching_time_estimation_tools import *"
    ],
    "metadata": {
@@ -298,6 +298,19 @@
    "execution_count": 18
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# INTEGRASE CONCENTRATIONS FROM SWITCH PROTEIN CONCENTRATION\n",
+    "p_int_low=pint_from_pswitch_and_xi(p_switch_low,xis['a'] + xis['r'] + xis['other'] + xis['cat'] + xis['prot'],par, cellvars)\n",
+    "p_int_high=pint_from_pswitch_and_xi(p_switch_high,xis['a'] + xis['r'] + xis['other'] + xis['cat'] + xis['prot'],par, cellvars)\n",
+    "print('Integrase concentration at low state:',p_int_low)\n",
+    "print('Integrase concentration at high state:',p_int_high)"
+   ]
+  },
+  {
    "cell_type": "code",
    "source": [
     "# SIMULATE FOR XTRA GENE PRESENT\n",
@@ -340,9 +353,9 @@
     "# SWITCH CONDITION DEFINITION\n",
     "\n",
     "# condition for falling to a state\n",
-    "def switch_condition_fall(x,next_x,switch_boundary,pswitch_pos):\n",
-    "    return jnp.logical_and(x[pswitch_pos]>switch_boundary,\n",
-    "                           next_x[pswitch_pos]<=switch_boundary)"
+    "def switch_condition_fall(x,next_x,switch_boundary,p_pos):\n",
+    "    return jnp.logical_and(x[p_pos]>switch_boundary,\n",
+    "                           next_x[p_pos]<=switch_boundary)"
    ],
    "outputs": [],
    "execution_count": 20
@@ -359,7 +372,7 @@
     "# MEMORY-EFFICIENT SWITCH TIME DETERMINATION\n",
     "\n",
     "# we consider state switched when we come within  10% OF CHARACTERISTIC PROTEIN CONCENTRATION\n",
-    "sc_high_to_low=lambda x, next_x: switch_condition_fall(x,next_x,1.1*p_switch_low,circuit_name2pos['p_switch']) # high to low switching\n",
+    "sc_high_to_low=lambda x, next_x: switch_condition_fall(x,next_x,1.1*p_int_low,circuit_name2pos['p_int']) # high to low switching\n",
     "sc_unnecessary=lambda x, next_x: jnp.zeros_like(x[circuit_name2pos['p_switch']],dtype=bool) # second switch condition check unnecessary here\n",
     "\n",
     "tf_hybrid = (ts_det[-1], ts_det[-1] + tau_leap_sim_duration)  # simulation time frame\n",
@@ -560,6 +573,20 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# INTEGRASE CONCENTRATIONS FROM SWITCH PROTEIN CONCENTRATIONS\n",
+    "\n",
+    "p_int_low_no_xtra=p_int_low # low state reused\n",
+    "p_int_high_no_xtra=pint_from_pswitch_and_xi(p_switch_high_no_xtra,xis['a'] + xis['r'] + xis['cat'] + xis['prot'],par_no_xtra, cellvars_no_xtra) # high state is new\n",
+    "print('Integrase concentration at low state:',p_int_low_no_xtra)\n",
+    "print('Integrase concentration at high state:',p_int_high_no_xtra)"
+   ]
+  },
+  {
    "cell_type": "code",
    "source": [
     "# GET DETERMINISTIC STEADY STATE\n",
@@ -601,7 +628,6 @@
     "# MEMORY-EFFICIENT SWITCH TIME DETERMINATION\n",
     "\n",
     "# we consider state switched when we come within  10% OF CHARACTERISTIC PROTEIN CONCENTRATION\n",
-    "# IMPORTANT: switch states assumed to be the same between the cases with and without the xtra gene\n",
     "sc_high_to_low_no_xtra=sc_high_to_low # high to low switching -same condition as LOW state reused\n",
     "\n",
     "par_no_xtra=par.copy() # parameters for the case with the xtra gene absent\n",
