Fall time correction

--- a/Fig5/Make Pop Model/Find_fall_times_noprot.ipynb
+++ b/Fig5/Make Pop Model/Find_fall_times_noprot.ipynb
@@ -525,6 +525,7 @@
     "# record switching times in numpy arrays\n",
     "high_to_low_fall_times=np.array(high_to_low_fall_times_since_stochstart) # we need times of falling to zero since REACHING THE LOW STATE\n",
     "low_to_zero_fall_times=np.array(low_to_zero_fall_times_since_stochstart - high_to_low_fall_times) # we need times of falling to zero since REACHING THE LOW STATE\n",
+    "low_to_zero_fall_times[low_to_zero_fall_times<0]=0 # if the low state is never reached, the recorded fall time is zero\n",
     "\n",
     "# print results\n",
     "print('High-to-low fall times:',high_to_low_fall_times)\n",
@@ -860,6 +861,7 @@
     "# record switching times in numpy arrays\n",
     "high_to_low_fall_times_no_xtra=np.array(high_to_low_fall_times_no_xtra_since_stochastart_no_xtra) # we need times of falling to zero since REACHING THE LOW STATE\n",
     "low_to_zero_fall_times_no_xtra=np.array(low_to_zero_fall_times_since_stochstart_no_xtra - high_to_low_fall_times_no_xtra) # we need times of falling to zero since REACHING THE LOW STATE\n",
+    "low_to_zero_fall_times_no_xtra[low_to_zero_fall_times_no_xtra<0]=0 # if the low state is never reached, the recorded fall time is zero\n",
     "\n",
     "print('High-to-low fall times:',high_to_low_fall_times_no_xtra)\n",
     "print('Low-to-zero fall times:',low_to_zero_fall_times_no_xtra)\n",
